src/snapshots/libflatterer__tests__empty_array-2.snap
---
source: src/lib.rs
expression: output

---
- "table_name,field_name,field_type,field_title,count"
- "main,_link,text,_link,1"

