src/snapshots/libflatterer__tests__empty_array.snap
---
source: src/lib.rs
expression: "&value"

---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: main
    schema:
      fields:
        - name: _link
          type: text
          count: 1
      primaryKey: _link
    path: csv/main.csv

