src/snapshots/libflatterer__tests__full_test-10.snap
---
source: src/lib.rs
expression: output

---
- "_link,_link_main,name"
- "1.platforms.0,1,PC"
- "2.platforms.0,2,Xbox"
- "2.platforms.1,2,Playstation"

