src/snapshots/libflatterer__tests__full_test-11.snap
---
source: src/lib.rs
expression: output

---
- "_link,_link_main,name"
- "0.platforms.0,0,PC"
- "1.platforms.0,1,Xbox"
- "1.platforms.1,1,Playstation"

