src/snapshots/libflatterer__tests__full_test-2.snap
---
source: src/lib.rs
expression: output

---
- "table_name,field_name,field_type,field_title,count"
- "main,_link,text,_link,2"
- "main,_link_main,text,_link_main,2"
- "main,id,number,id,2"
- "main,title,text,title,2"
- "main,releaseDate,date,releaseDate,2"
- "main,rating_code,text,rating_code,2"
- "main,rating_name,text,rating_name,2"
- "developer,_link,text,_link,2"
- "developer,_link_main,text,_link_main,2"
- "developer,name,text,name,2"
- "platforms,_link,text,_link,3"
- "platforms,_link_main,text,_link_main,3"
- "platforms,name,text,name,3"

