src/snapshots/libflatterer__tests__full_test-3.snap
---
source: src/lib.rs
expression: output

---
- "table_name,table_title"
- "main,main"
- "developer,developer"
- "platforms,platforms"

