src/snapshots/libflatterer__tests__full_test-4.snap
---
source: src/lib.rs
expression: output

---
- "_link,id,title,releaseDate,rating_code,rating_name"
- "0,1,A Game,2015-01-01,E,Everyone"
- "1,2,B Game,2016-01-01,E,Everyone"

