src/snapshots/libflatterer__tests__full_test_in_object-2.snap
---
source: src/lib.rs
expression: output

---
- "table_name,field_name,field_type,field_title,count"
- "games,_link,text,_link,2"
- "games,_link_main,text,_link_main,2"
- "games,id,number,id,2"
- "games,title,text,title,2"
- "games,releaseDate,date,releaseDate,2"
- "games,rating_code,text,rating_code,2"
- "games,rating_name,text,rating_name,2"
- "games_developer,_link,text,_link,2"
- "games_developer,_link_games,text,_link_games,2"
- "games_developer,_link_main,text,_link_main,2"
- "games_developer,name,text,name,2"
- "games_platforms,_link,text,_link,3"
- "games_platforms,_link_games,text,_link_games,3"
- "games_platforms,_link_main,text,_link_main,3"
- "games_platforms,name,text,name,3"
- "main,_link,text,_link,1"

