src/snapshots/libflatterer__tests__full_test_in_object-7.snap
---
source: src/lib.rs
expression: output

---
- "_link,_link_games,_link_main,name"
- "0.games.0.developer.0,0.games.0,0,deva"
- "0.games.1.developer.0,0.games.1,0,devb"

